# gemini-pdf-batch-analyzer

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: run_analysis.ps1  run_analysis.sh
src/gemini_pdf_analyzer/: __init__.py  __main__.py  analyzer.py  cache.py  cli.py  config.py  exporter.py  models.py  pdf_loader.py
tests/: conftest.py  test_analyzer.py  test_cache.py  test_exporter.py  test_pdf_loader.py
